--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "Who-pays-speakers",
+  "name": "CodeAdvent2015",
   "version": "0.0.1",
   "scripts": {
     "start": "node app.js"
   },
   "dependencies": {
     "bunyan": "^1.5.1",
+    "cors": "^2.7.1",
     "express": "3.4.8",
     "hbs": "^3.1.1",
-    "serve-favicon": "^2.3.0"
+    "markdown-it": "^5.0.2",
+    "serve-favicon": "^2.3.0",
+    "underscore": "^1.8.3"
   }
 }
